@@ -36,7 +36,7 @@ if {[tk windowingsystem] eq "classic" || [tk windowingsystem] eq "aqua"} {
 	tk::ButtonUp %W
     }
 }
-if {"windows" eq $tcl_platform(platform)} {
+if {"win32" eq [tk windowingsystem]} {
     bind Checkbutton <equal> {
 	tk::CheckRadioInvoke %W select
     }
@@ -125,7 +125,7 @@ bind Radiobutton <Leave> {
     tk::ButtonLeave %W
 }
 
-if {"windows" eq $tcl_platform(platform)} {
+if {"win32" eq [tk windowingsystem]} {
 
 #########################
 # Windows implementation 
